# python-api-playground

./: .env.example  .gitignore  README.md  pyproject.toml
src/api_framework/: api_client.py
src/api_framework/models/: artists_model.py
src/api_framework/services/: artists_service.py
src/python_api_playground/: api_client.py
src/python_api_playground/models/: artists_model.py
src/python_api_playground/services/: artists_service.py
tests/: conftest.py
tests/functional/: conftest.py  test_artists_api_functional.py
tests/functional/artists/: test_create_artist.py  test_delete_artist.py  test_get_artist_by_id.py  test_get_artists.py  test_update_artist.py
tests/functional/helpers/: artists_helpers.py  common_helpers.py
tests/functional/steps/: artists_steps.py
tests/functional/test_data/: artist_test_payloads.py
