[project]
name = "python-api-playground"
version = "0.1.0"
description = "API tests for Toy Testing Example"
authors = [
    { name = "aleksei.shemetov", email = "alxshemetov@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pydantic[email,timezone] (>=2.12.2,<3.0.0)",
    "datamodel-code-generator (>=0.35.0,<0.36.0)",
    "faker (>=37.11.0,<38.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "api_framework", from = "src" },
    { include = "app", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "-v", # Verbose output
    "-l", # Show local variables on failure
    "--setup-show", # Show fixture setup/teardown
    "--alluredir=./allure-results", # Allure results directory
    "--clean-alluredir", # Clean results before each run (optional)
]